@@ -46,3 +46,11 @@ Linking image scales should also work:
   >>> img.getBackReferences()
   [<ATDocument at /plone/doc1>]
 
+Linking via the "resolveuid/UID" method should also work:
+
+  >>> self.setText(doc, '<a href="resolveuid/%s">an image</a>' % (
+  ...     img.UID(),))
+  >>> doc.getReferences()
+  [<ATImage at /plone/image1>]
+  >>> img.getBackReferences()
+  [<ATDocument at /plone/doc1>]
