@@ -6,7 +6,6 @@ Changelog
 
 - Fix an error in handling absolute links to objects within the portal,
   which prevented references from being created based on those links.
-  This fixes linkintegrity for sites with link-by-uid turned on.
   This closes https://dev.plone.org/ticket/12402
   [davisagli]
 
@@ -17,6 +16,12 @@ Changelog
 - Use the `get` method to retrieve the field value if the instance
   does not provide an accessor method. This is the case for instance
   for fields which have been added via schema extension.
+
+- Support resolveuid/UID references explicitely, by parsing and resolving
+  these ourselves instead of relying on a view or script (which doesn't work).
+  This fixes linkintegrity for sites with link-by-uid turned on.
+  This closes https://dev.plone.org/ticket/12104
+  [mj]
 
 1.4.4 - 2011-10-04
 ------------------
